# 02_clustering_dim_reduction

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
